<Feat> MOCK UI REFACTORING

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -37,7 +37,7 @@
     <nav class="navbar navbar-expand-lg app-nav mb-4">
       <div class="container">
         <a class="navbar-brand" href="/">
-          <span class="brand-text">Damara</span>
+          <span class="brand-text">Thomas Anderson</span>
         </a>
         <button
           class="navbar-toggler"
